[package]
name = "expresstrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = { version = "0.7.4", features = ["http2", "ws", "macros"] }
bytes = "1.5.0"
gtfs-rt = "0.4.0"
prost = "0.11"
prost-derive = "0.11"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }


[build-dependencies]
prost-build = "0.11"
